--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,11 @@
   background-color:  var(--themeColour);
 }
 
+.darkMode{
+    background-color: rgba(0, 0, 0, 0.767);
+    color: white;
+}
+
 *{
     padding: 0px;
     font-family: 'Poppins', sans-serif;
