--- a/src/Pages/Homepage/Homepage.css
+++ b/src/Pages/Homepage/Homepage.css
@@ -495,6 +495,10 @@ z-index: 2;
     max-height: 40vh;
     scroll-behavior: smooth;
 }
+.scrollY {
+    overflow-y: scroll;
+    scroll-behavior: smooth;
+}
 
 .showSrcResults{
     overflow-y: scroll;
