--- a/src/Pages/Homepage/Homepage.css
+++ b/src/Pages/Homepage/Homepage.css
@@ -133,12 +133,12 @@ color: white;
 .search-input{
     width: 100%;
     margin: 0px auto;
-    padding: 0.35rem 0.9rem;
+    padding: 0.65rem 0.9rem;
     outline: none;
     border: none;
     padding-left: 6rem;
-    border-radius: 0.35rem;
-    box-shadow: 0px 0px 4px var(--themeColour);
+    border-radius: 2rem;
+    box-shadow: 0px 0px 4px 2px var(--themeColour);
     background-color: rgba(255, 255, 255, 0.973);
 }
 .search-input:focus{
@@ -156,6 +156,20 @@ color: white;
     width: 5rem;
     color: #fff;
     height: 2.2rem;
+}
+.search-btnd{
+    position: absolute;
+    right: 8px;
+    top: 2px;
+    background-color: var(--themeColour) ;
+    cursor: pointer;
+    border-radius: 2rem;
+    width: 3rem;
+    height: 2.5rem;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .menu-list{
     list-style: none;
