--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,32 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+#pre_loader{
+  height: 100vh;
+  width: 100%;
+  background-color: #355b7d;
+}
+
+.span{
+  height: 2rem;
+  z-index: 2;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(100%);
+  width: 2rem;
+  border:4px solid rgb(255, 167, 3);
+  border-radius: 50%;
+  background-color: #355b7d;
+  animation: pre_loader  .7s linear infinite ;
+}
+
+
+@keyframes pre_loader {
+  0% { transform:  scale(1); opacity: 1;}
+  33% { transform:  scale(2); opacity: 0.6;}
+  66% { transform:  scale(3); opacity: 0.3;}
+  100% { transform:  scale(4); opacity: 0;}
+ }
+ 
+ 
