--- a/src/Pages/Loginpage/Loginpage.css
+++ b/src/Pages/Loginpage/Loginpage.css
@@ -1,20 +1,8 @@
 .login-container {
-    min-height: 86vh;
+    min-height: 76vh;
     display: flex;
     align-items: center;
     justify-content: center;
-}
-.back-navigator{
-    margin: 0px auto;
-    padding: 1rem;
-    padding-left: 3rem;
-    background-color: white;
-}
-.logo{
-    display: inline-block;
-    width: 30%;
-    margin-left: 30%;
-    background-color: #4285f4;
 }
 
 .login-form-div{
@@ -22,14 +10,15 @@
     align-items: center;
     justify-content: center;
 flex-direction: column;
-    background-color: rgba(39, 30, 19, 0.551);
+    background-color: rgb(0 27 38 / 76%);
     height: 23rem;
     border-radius: 1rem;
-    width: 23rem;
+    width: 94vw;
+    max-width: 32rem;
 }
 .login-form{
     width: 100%;
-    height: 100%;
+    height: 70%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -63,14 +52,16 @@ flex-direction: column;
     width: 99%;
 }
 .social-login{
-    width: 62%;
-margin: 1rem;
-
+   display: flex;
+   justify-content: center;
+   width: 100%;
+   align-items: center;
 }
 .social-login-google{
     display: flex;
     position: relative;
     margin: 0px auto;
+    width: 14rem;
 }
 
 .social-google-head{
