--- a/src/Pages/Signuppage/Signuppage.css
+++ b/src/Pages/Signuppage/Signuppage.css
@@ -1,22 +1,10 @@
 .signup-container {
-    min-height: 86vh;
+    min-height: 76vh;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.back-navigator{
-    margin: 0px auto;
-    padding: 1rem;
-    padding-left: 3rem;
-    background-color: white;
-}
-.logo{
-    display: inline-flex;
-    margin-left: 30%;
-justify-content: center;
-align-items: center;
-    background-color: #4285f4;
-}
+
 
 
 .signup-form-div{
@@ -24,10 +12,11 @@ align-items: center;
     align-items: center;
     justify-content: center;
 flex-direction: column;
-    background-color: rgba(39, 30, 19, 0.551);
-    height: 23rem;
+background-color: rgb(0 27 38 / 76%);
+height: 23rem;
     border-radius: 1rem;
-    width: 23rem;
+    width: 94vw;
+    max-width: 32rem;
 }
 .signup-form{
     width: 100%;
